# dwr

./: .gitignore  README.md
fritzing_parts/: ESP 32 DEVKIT DOIT.fzpz  README.md  VNH5019 motor driver.fzpz
proto1/: README.md
proto1/breadboard/: proto1.fzz
proto1/fritzing/: README.md  proto1.fzz
proto1/sketch/: DcMotor.cpp  DcMotor.h  Encoder.cpp  Encoder.h  Motor.h  board.cpp  board.h  dcmotor.cpp  dcmotor.h  encoder.cpp  encoder.h  ir.cpp  ir.h  motor.h  mpu6050.cpp  mpu6050_dmp6.cpp  mpu6050_dmp6.h  pid.cpp  pid.h  pwm.cpp  pwm.h  sketch.ino  status_led.cpp  status_led.h  test.cpp  test.h  test_motor.cpp  test_motor.h
proto1/test/: README.md
proto1/test/hc05_at_command/: README.md  hc05_at_command.ino
proto1/test/hc05_data/: README.md  hc05_data.ino
proto1/test/ir/: README.md  ir.ino
proto1/test/motor_direction/: README.md  dcmotor.cpp  dcmotor.h  motor.h  motor_direction.ino
proto1/test/mpu6050/: mpu6050.ino
proto1/test/serial/: serial.ino
proto1/test_hc05/: README.md  test_hc05.ino
proto1/test_mpu6050_dmp/: README.md  test_mpu6050_dmp.ino
proto1/test_serial/: README.md
proto2/: README.md
proto2/fritzing/: README.md  proto2.fzz
proto2/sketch/: README.md  balancing.cpp  board.cpp  board.h  mpu6050.h  pid.cpp  pid.h  proto2.fzz  sketch.ino  upload
proto2/test/ir/: README.md  (+1 more)
proto3/: README.md
proto3/fritzing/: README.md  proto3.fzz
proto3/test/: README.md
proto3/test/mpu6050-filter/main/: CMakeLists.txt  mpu6050_filter.cpp
tests/: README.md
tests/hc05_data/: README.md  hc05_data.ino
tests/unomonitor/: unomonitor.ino
(+66 files in other folders)
